add the examples to java 8